# JaguarEngine

./: .clang-format  .gitignore  404.html  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  nightly.yml  security.yml
.omc/: ultrawork-state.json
.omc/plans/: core-engine-enhancement-plan.md
advanced/architecture/: index.html
advanced/custom-models/: index.html
advanced/networking/: index.html
api/air/: index.html
api/cloud/: index.html
api/configuration/: index.html
api/core/: index.html
api/environment/: index.html
api/federation/: index.html
api/gpu/: index.html
api/land/: index.html
api/lua/: index.html
api/ml/: index.html
api/overview/: index.html
api/physics/: index.html
api/python/: index.html
api/sea/: index.html
api/sensors/: index.html
api/space/: index.html
api/thread/: index.html
api/xr/: index.html
build_test/: cmake_test_discovery_0140f2c8a5.json  cmake_test_discovery_134bf5e388.json  cmake_test_discovery_17fa6a7337.json  cmake_test_discovery_1c2f4a3539.json  cmake_test_discovery_2c06c89bc6.json  cmake_test_discovery_2f2f7a6848.json  cmake_test_discovery_3f361c61db.json  cmake_test_discovery_4c66b982be.json  cmake_test_discovery_6910910e90.json  cmake_test_discovery_7a230ea403.json  cmake_test_discovery_8318b65d1f.json  cmake_test_discovery_869aa40c9c.json  cmake_test_discovery_8faafe6491.json  cmake_test_discovery_9e4d309622.json  cmake_test_discovery_a1c8b08c71.json  cmake_test_discovery_a7384c9b59.json  cmake_test_discovery_cb42056f00.json  cmake_test_discovery_de14ac5f41.json  cmake_test_discovery_e74cfe40b9.json  cmake_test_discovery_f55c341e74.json  compile_commands.json  jaguar_auto_scaler_tests  jaguar_autopilot_tests  jaguar_benchmarks  jaguar_degradation_tests  jaguar_haptics_tests  jaguar_history_tests  jaguar_hybrid_physics_tests  jaguar_inference_tests  jaguar_lifecycle_tests  jaguar_memory_pool_tests  jaguar_model_repo_tests  jaguar_network_transport_tests  jaguar_partition_tests  jaguar_physics_kernel_tests  jaguar_rl_env_tests  jaguar_spatial_audio_tests  jaguar_state_sync_tests  jaguar_time_sync_tests  jaguar_training_tests  (+2 more)
claudedocs/: research_jaguarengine_improvement_plan_20260121.md
cmake/: JaguarConfig.cmake.in
concepts/coordinates/: index.html
concepts/entities/: index.html
concepts/environment/: index.html
concepts/force-generators/: index.html
concepts/integration/: index.html
concepts/overview/: index.html
contributing/: index.html
data/aircraft/: f16.xml
data/entities/: f16c_example.xml
data/materials/: soil_types.xml
deploy/kubernetes/: configmap.yaml  ingress.yaml  kustomization.yaml  monitoring.yaml  namespace.yaml  rbac.yaml  secrets.yaml  services.yaml  simulation-server.yaml  storage.yaml  terrain-service.yaml
docs/: API_REFERENCE.md  CONFIGURATION.md  CONTRIBUTING.md  Doxyfile  EXAMPLES.md  IMPLEMENTATION_WORKFLOW.md  INSTALLATION.md  QUICK_START_IMPLEMENTATION.md  Simulation Engine Developement Strategy.docx
docs/architecture/: ARCHITECTURE.md  PHASE7_ROADMAP.md
docs/modules/: AIR_DOMAIN.md  CLOUD.md  CORE.md  ENVIRONMENT.md  EVENTS.md  FEDERATION.md  GPU.md  LAND_DOMAIN.md  ML.md  PHYSICS.md  SEA_DOMAIN.md  SENSORS.md  SPACE_DOMAIN.md  TERRAIN.md  THREAD.md  THREADING.md  XR.md
docs/pages/: getting_started.md  lua_api.md  mainpage.md  python_api.md
docs/web/: contributing.md  index.md  publishing.md
docs/web/api/: ml.md  (+17 more)
domains/air/: index.html
domains/land/: index.html
domains/sea/: index.html
domains/space/: index.html
examples/frontend/: .env.example  .gitignore  README.md  index.html  mock-server.js  package-lock.json  package.json  tailwind.config.js  vite.config.ts
examples/lua/: basic_simulation.lua  flight_simulation.lua
examples/multi_domain/: main.cpp
examples/python/: basic_simulation.py  flight_simulation.py
examples/server/: CMakeLists.txt  README.md  main.cpp  websocket_server.cpp  websocket_server.h
examples/simple_flight/: main.cpp
getting-started/first-simulation/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
include/jaguar/: jaguar.h
publishing/: index.html
search/: search_index.json
src/cloud/: auto_scaler.cpp  distributed_time.cpp  partition_manager.cpp  state_sync.cpp
src/core/: config_loader.cpp  engine_exec.cpp  property_manager.cpp  simd.cpp  time_manager.cpp  xml_entity_loader.cpp
src/dynamics/: flight_control.cpp
src/environment/: dryden_turbulence.cpp  environment_service.cpp
src/events/: event.cpp  event_dispatcher.cpp
src/federation/: dis_fire_pdu.cpp  dis_protocol.cpp  dis_socket.cpp  federation_orchestrator.cpp  hla_rti.cpp  network_transport.cpp
src/gpu/: compute_backend.cpp  cpu_backend.cpp  hybrid_physics.cpp  memory_pool.cpp  physics_kernels.cpp
src/interface/: xml_entity_loader.cpp
src/ml/: inference_session.cpp  model_repository.cpp  neural_autopilot.cpp  rl_environment.cpp
src/physics/: collision.cpp  component_force_registry.cpp  damage.cpp  entity_manager.cpp  force_generators.cpp  physics_system.cpp
src/sensors/: imu_sensor.cpp  sensor.cpp
src/telemetry/: telemetry.cpp
src/thread/: degradation_model.cpp  history_store.cpp  lifecycle_manager.cpp
src/xr/: haptics.cpp  mock_xr_runtime.cpp  spatial_audio.cpp  training.cpp  xr_session.cpp
tests/benchmarks/: bench_main.cpp
tests/cloud/: auto_scaler_tests.cpp  partition_tests.cpp  state_sync_tests.cpp  time_sync_tests.cpp
tests/domain/: test_suspension_terrain.cpp
tests/environment/: test_terrain_integration.cpp
tests/federation/: dis_fire_pdu_tests.cpp  dis_protocol_tests.cpp  hla_rti_tests.cpp  network_transport_tests.cpp
tests/gpu/: cuda_tests.cpp  hybrid_physics_tests.cpp  memory_pool_tests.cpp  metal_tests.mm  opencl_tests.cpp  physics_kernel_tests.cpp
tests/integration/: README.md  test_federation_integration.cpp  test_physics_integration.cpp  test_threading_integration.cpp
tests/lua/: test_basic.lua
tests/ml/: inference_session_tests.cpp  model_repository_tests.cpp  (+2 more)
(+280 files in other folders)
